<resources>
    <string name="app_name">Berasil</string>

    <string name="logo_icon">Logo Icon</string>

    <string name="welcoming">Selamat datang di Berasil</string>
    <string name="text_identification">Identifikasi kualitas beras putih Anda dengan efektif dan efisien</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="text_meet_again">Senang Bisa Bertemu Kembali</string>
    <string name="text_enter_your_account">Masukkan informasi akun Anda untuk memulai kembali</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Belum memiliki akun?</string>
    <string name="name">Name</string>

    <string name="have_account">Sudah memiliki akun?</string>
    <string name="text_create_account">Lengkapi Data Akun Anda</string>
    <string name="text_insert_data">Masukkan data yang diperlukan untuk memulai mendaftar</string>
    <string name="image_illustration">Image Illustration</string>

    <string name="title_detection">Deteksi</string>
    <string name="title_history">Riwayat</string>
    <string name="title_account">Akun</string>

    <string name="image_preview">Image Preview</string>
    <string name="upload_image">Unggah Gambar</string>
    <string name="take_image">Ambil Gambar</string>
    <string name="detection_now">Deteksi Sekarang</string>
    <string name="image_result">Image Result</string>

    <string name="text_quality">Kualitas</string>

    <string name="butir_kepala">Butir Kepala</string>
    <string name="butir_patah">Butir Patah</string>
    <string name="butir_menir">Butir Menir</string>
    <string name="butir_merah">Butir Merah</string>
    <string name="butir_rusak">Butir Rusak</string>
    <string name="butir_kapur">Butir Kapur</string>
    <string name="butir_gabah">Butir Gabah</string>
    <string name="sekam">Sekam</string>
    <string name="kutu">Kutu</string>
    <string name="batu">Batu</string>

    <string name="logout">Keluar</string>
    <string name="confirmation_logout">Apakah Anda yakin ingin keluar dari aplikasi Berasil?</string>
    <string name="cancel">Batal</string>
    <string name="delete">Hapus</string>
    <string name="confirmation_delete">Apakah Anda yakin ingin menghapus riwayat ini?</string>
    <string name="history_empty">Tidak ada riwayat satupun</string>

    <string name="loading_text">Loading…</string>
    <string name="text_market_price">Harga Pasar</string>
    <string name="update_market_price">Perbarui Harga Pasar</string>
    <string name="text_detail">Detail</string>
    <string name="ikhtisar_deteksi">Ikhtisar Deteksi</string>
    <string name="default_price">Rp0/kg</string>
    <string name="informasi_tambahan">Informasi Tambahan</string>
    <string name="segmentasi_pasar">Segmentasi Pasar</string>
    <string name="location">Lokasi</string>
    <string name="next">Lanjut</string>
    <string name="image_view_no_data">Image View No Data</string>
    <string name="icon_arrow_forward">Icon Arrow Forward</string>

    <string-array name="priceType">
        <item>Pasar tradisional</item>
        <item>Pasar Modern</item>
        <item>Pedagang Pasar</item>
        <item>Produsen</item>
    </string-array>

    <string-array name="provId">
        <item>Aceh</item>
        <item>Sumatera Utara</item>
        <item>Sumatera Barat</item>
        <item>Riau</item>
        <item>Kepulauan Riau</item>
        <item>Jambi</item>
        <item>Bengkulu</item>
        <item>Sumatera Selatan</item>
        <item>Kepulauan Bangka Belitung</item>
        <item>Lampung</item>
        <item>Banten</item>
        <item>Jawa Barat</item>
        <item>DKI Jakarta</item>
        <item>Jawa Tengah</item>
        <item>DI Yogyakarta</item>
        <item>Jawa Timur</item>
        <item>Bali</item>
        <item>NTB</item>
        <item>NTT</item>
        <item>Kalimantan Barat</item>
        <item>Kalimantan Selatan</item>
        <item>Kalimantan Tengah</item>
        <item>Kalimantan Timur</item>
        <item>Kalimantan Utara</item>
        <item>Gorontalo</item>
        <item>Sulawesi Selatan</item>
        <item>Sulawesi Tenggara</item>
        <item>Sulawesi Tengah</item>
        <item>Sulawesi Utara</item>
        <item>Sulawesi Barat</item>
        <item>Maluku</item>
        <item>Maluku Utara</item>
        <item>Papua</item>
        <item>Papua Barat</item>
    </string-array>
</resources>