<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detection.DetectionFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|enterAlways">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary"
            app:logo="@drawable/logo_text" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/preview_image_view"
                android:layout_width="0dp"
                android:layout_height="350dp"
                android:contentDescription="@string/image_preview"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_place_holder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/gallery_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/primary"
                android:drawableTop="@drawable/ic_image_up"
                android:fontFamily="@font/sf_pro_text_semibold"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:text="@string/upload_image"
                android:textAllCaps="false"
                android:textAppearance="@style/text_base"
                android:textColor="@color/base950"
                app:layout_constraintEnd_toStartOf="@id/camera_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/preview_image_view"
                app:rippleColor="@color/secondary" />

            <Button
                android:id="@+id/camera_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/primary"
                android:drawableTop="@drawable/ic_camera_primary"
                android:fontFamily="@font/sf_pro_text_semibold"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:text="@string/take_image"
                android:textAllCaps="false"
                android:textAppearance="@style/text_base"
                android:textColor="@color/base950"
                app:layout_constraintBottom_toBottomOf="@+id/gallery_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/gallery_button"
                app:layout_constraintTop_toTopOf="@+id/gallery_button"
                app:rippleColor="@color/secondary" />

            <Button
                android:id="@+id/button_detection_now"
                android:layout_width="0dp"
                android:layout_height="74dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/primary500"
                android:fontFamily="@font/sf_pro_text_bold"
                android:text="@string/detection_now"
                android:textAllCaps="false"
                android:textAppearance="@style/text_ig"
                android:textColor="@color/secondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gallery_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>